--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "NodeNext",
     "target": "ESNext",
     "isolatedModules": true,
+    "resolveJsonModule": true,
     "noEmit": true,
     "strict": true,
     "noImplicitOverride": true,
